parser.automaton
State 0:
program' -> . program [ # ]
-- On VAR shift to state 1
-- On TYPE shift to state 43
-- On PRINT shift to state 53
-- On IF shift to state 58
-- On IDENT shift to state 2
-- On FOREACH shift to state 64
-- On statement shift to state 70
-- On program shift to state 92
-- On nonempty_list(statement) shift to state 93
-- On ident shift to state 72

State 1:
statement -> VAR . ident COLON TINT EQUAL expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
statement -> VAR . ident COLON ident FILLED BY expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
-- On IDENT shift to state 2
-- On ident shift to state 3

State 2:
ident -> IDENT . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS LBRACKET IN FILLED EQUAL DOT DO DIV COLON BINOP AND ]
-- On TIMES reduce production ident -> IDENT 
-- On SEMICOLON reduce production ident -> IDENT 
-- On RPARENT reduce production ident -> IDENT 
-- On RBRACKET reduce production ident -> IDENT 
-- On PLUS reduce production ident -> IDENT 
-- On OR reduce production ident -> IDENT 
-- On OF reduce production ident -> IDENT 
-- On MINUS reduce production ident -> IDENT 
-- On LBRACKET reduce production ident -> IDENT 
-- On IN reduce production ident -> IDENT 
-- On FILLED reduce production ident -> IDENT 
-- On EQUAL reduce production ident -> IDENT 
-- On DOT reduce production ident -> IDENT 
-- On DO reduce production ident -> IDENT 
-- On DIV reduce production ident -> IDENT 
-- On COLON reduce production ident -> IDENT 
-- On BINOP reduce production ident -> IDENT 
-- On AND reduce production ident -> IDENT 

State 3:
statement -> VAR ident . COLON TINT EQUAL expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
statement -> VAR ident . COLON ident FILLED BY expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
-- On COLON shift to state 4

State 4:
statement -> VAR ident COLON . TINT EQUAL expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
statement -> VAR ident COLON . ident FILLED BY expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
-- On TINT shift to state 5
-- On IDENT shift to state 2
-- On ident shift to state 38

State 5:
statement -> VAR ident COLON TINT . EQUAL expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
-- On EQUAL shift to state 6

State 6:
statement -> VAR ident COLON TINT EQUAL . expression SEMICOLON [ VAR TYPE RKEY PRINT IF IDENT FOREACH EOF ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 36

State 7:
expression -> SIZE . LPARENT expression RPARENT [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On LPARENT shift to state 8

State 8:
expression -> SIZE LPARENT . expression RPARENT [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 34

State 9:
expression -> LPARENT . expression RPARENT [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 32

State 10:
expression -> CONSTANT . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES reduce production expression -> CONSTANT 
-- On SEMICOLON reduce production expression -> CONSTANT 
-- On RPARENT reduce production expression -> CONSTANT 
-- On RBRACKET reduce production expression -> CONSTANT 
-- On PLUS reduce production expression -> CONSTANT 
-- On OR reduce production expression -> CONSTANT 
-- On OF reduce production expression -> CONSTANT 
-- On MINUS reduce production expression -> CONSTANT 
-- On DOT reduce production expression -> CONSTANT 
-- On DO reduce production expression -> CONSTANT 
-- On DIV reduce production expression -> CONSTANT 
-- On BINOP reduce production expression -> CONSTANT 
-- On AND reduce production expression -> CONSTANT 

State 11:
expression -> ident . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> ident . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On LBRACKET shift to state 12
-- On TIMES reduce production expression -> ident 
-- On SEMICOLON reduce production expression -> ident 
-- On RPARENT reduce production expression -> ident 
-- On RBRACKET reduce production expression -> ident 
-- On PLUS reduce production expression -> ident 
-- On OR reduce production expression -> ident 
-- On OF reduce production expression -> ident 
-- On MINUS reduce production expression -> ident 
-- On DOT reduce production expression -> ident 
-- On DO reduce production expression -> ident 
-- On DIV reduce production expression -> ident 
-- On BINOP reduce production expression -> ident 
-- On AND reduce production expression -> ident 

State 12:
expression -> ident LBRACKET . expression RBRACKET [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 13

State 13:
expression -> expression . PLUS expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . AND expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . OR expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES RBRACKET PLUS OR MINUS DOT DIV BINOP AND ]
expression -> ident LBRACKET expression . RBRACKET [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On RBRACKET shift to state 31
-- On PLUS shift to state 19
-- On OR shift to state 23
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On BINOP shift to state 27
-- On AND shift to state 29

State 14:
expression -> expression TIMES . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 15

State 15:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression TIMES expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On DOT shift to state 16
-- On TIMES reduce production expression -> expression TIMES expression 
-- On SEMICOLON reduce production expression -> expression TIMES expression 
-- On RPARENT reduce production expression -> expression TIMES expression 
-- On RBRACKET reduce production expression -> expression TIMES expression 
-- On PLUS reduce production expression -> expression TIMES expression 
-- On OR reduce production expression -> expression TIMES expression 
-- On OF reduce production expression -> expression TIMES expression 
-- On MINUS reduce production expression -> expression TIMES expression 
-- On DOT reduce production expression -> expression TIMES expression 
-- On DO reduce production expression -> expression TIMES expression 
-- On DIV reduce production expression -> expression TIMES expression 
-- On BINOP reduce production expression -> expression TIMES expression 
-- On AND reduce production expression -> expression TIMES expression 
** Conflict on DOT

State 16:
expression -> expression DOT . DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On DOT shift to state 17

State 17:
expression -> expression DOT DOT . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 18

State 18:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression DOT DOT expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On PLUS shift to state 19
-- On OR shift to state 23
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On BINOP shift to state 27
-- On AND shift to state 29
-- On TIMES reduce production expression -> expression DOT DOT expression 
-- On SEMICOLON reduce production expression -> expression DOT DOT expression 
-- On RPARENT reduce production expression -> expression DOT DOT expression 
-- On RBRACKET reduce production expression -> expression DOT DOT expression 
-- On PLUS reduce production expression -> expression DOT DOT expression 
-- On OR reduce production expression -> expression DOT DOT expression 
-- On OF reduce production expression -> expression DOT DOT expression 
-- On MINUS reduce production expression -> expression DOT DOT expression 
-- On DOT reduce production expression -> expression DOT DOT expression 
-- On DO reduce production expression -> expression DOT DOT expression 
-- On DIV reduce production expression -> expression DOT DOT expression 
-- On BINOP reduce production expression -> expression DOT DOT expression 
-- On AND reduce production expression -> expression DOT DOT expression 
** Conflict on TIMES PLUS OR MINUS DOT DIV BINOP AND

State 19:
expression -> expression PLUS . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 20

State 20:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression PLUS expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On SEMICOLON reduce production expression -> expression PLUS expression 
-- On RPARENT reduce production expression -> expression PLUS expression 
-- On RBRACKET reduce production expression -> expression PLUS expression 
-- On PLUS reduce production expression -> expression PLUS expression 
-- On OR reduce production expression -> expression PLUS expression 
-- On OF reduce production expression -> expression PLUS expression 
-- On MINUS reduce production expression -> expression PLUS expression 
-- On DOT reduce production expression -> expression PLUS expression 
-- On DO reduce production expression -> expression PLUS expression 
-- On BINOP reduce production expression -> expression PLUS expression 
-- On AND reduce production expression -> expression PLUS expression 
** Conflict on DOT

State 21:
expression -> expression DIV . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 22

State 22:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression DIV expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On DOT shift to state 16
-- On TIMES reduce production expression -> expression DIV expression 
-- On SEMICOLON reduce production expression -> expression DIV expression 
-- On RPARENT reduce production expression -> expression DIV expression 
-- On RBRACKET reduce production expression -> expression DIV expression 
-- On PLUS reduce production expression -> expression DIV expression 
-- On OR reduce production expression -> expression DIV expression 
-- On OF reduce production expression -> expression DIV expression 
-- On MINUS reduce production expression -> expression DIV expression 
-- On DOT reduce production expression -> expression DIV expression 
-- On DO reduce production expression -> expression DIV expression 
-- On DIV reduce production expression -> expression DIV expression 
-- On BINOP reduce production expression -> expression DIV expression 
-- On AND reduce production expression -> expression DIV expression 
** Conflict on DOT

State 23:
expression -> expression OR . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 24

State 24:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression OR expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On PLUS shift to state 19
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On BINOP shift to state 27
-- On AND shift to state 29
-- On SEMICOLON reduce production expression -> expression OR expression 
-- On RPARENT reduce production expression -> expression OR expression 
-- On RBRACKET reduce production expression -> expression OR expression 
-- On OR reduce production expression -> expression OR expression 
-- On OF reduce production expression -> expression OR expression 
-- On DOT reduce production expression -> expression OR expression 
-- On DO reduce production expression -> expression OR expression 
** Conflict on DOT

State 25:
expression -> expression MINUS . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 26

State 26:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression MINUS expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On SEMICOLON reduce production expression -> expression MINUS expression 
-- On RPARENT reduce production expression -> expression MINUS expression 
-- On RBRACKET reduce production expression -> expression MINUS expression 
-- On PLUS reduce production expression -> expression MINUS expression 
-- On OR reduce production expression -> expression MINUS expression 
-- On OF reduce production expression -> expression MINUS expression 
-- On MINUS reduce production expression -> expression MINUS expression 
-- On DOT reduce production expression -> expression MINUS expression 
-- On DO reduce production expression -> expression MINUS expression 
-- On BINOP reduce production expression -> expression MINUS expression 
-- On AND reduce production expression -> expression MINUS expression 
** Conflict on DOT

State 27:
expression -> expression BINOP . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 28

State 28:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression BINOP expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On PLUS shift to state 19
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On SEMICOLON reduce production expression -> expression BINOP expression 
-- On RPARENT reduce production expression -> expression BINOP expression 
-- On RBRACKET reduce production expression -> expression BINOP expression 
-- On OR reduce production expression -> expression BINOP expression 
-- On OF reduce production expression -> expression BINOP expression 
-- On DOT reduce production expression -> expression BINOP expression 
-- On DO reduce production expression -> expression BINOP expression 
-- On AND reduce production expression -> expression BINOP expression 
** Conflict on DOT

State 29:
expression -> expression AND . expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On SIZE shift to state 7
-- On LPARENT shift to state 9
-- On IDENT shift to state 2
-- On CONSTANT shift to state 10
-- On ident shift to state 11
-- On expression shift to state 30

State 30:
expression -> expression . PLUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . AND expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression AND expression . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . OR expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On PLUS shift to state 19
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On BINOP shift to state 27
-- On SEMICOLON reduce production expression -> expression AND expression 
-- On RPARENT reduce production expression -> expression AND expression 
-- On RBRACKET reduce production expression -> expression AND expression 
-- On OR reduce production expression -> expression AND expression 
-- On OF reduce production expression -> expression AND expression 
-- On DOT reduce production expression -> expression AND expression 
-- On DO reduce production expression -> expression AND expression 
-- On AND reduce production expression -> expression AND expression 
** Conflict on DOT

State 31:
expression -> ident LBRACKET expression RBRACKET . [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES reduce production expression -> ident LBRACKET expression RBRACKET 
-- On SEMICOLON reduce production expression -> ident LBRACKET expression RBRACKET 
-- On RPARENT reduce production expression -> ident LBRACKET expression RBRACKET 
-- On RBRACKET reduce production expression -> ident LBRACKET expression RBRACKET 
-- On PLUS reduce production expression -> ident LBRACKET expression RBRACKET 
-- On OR reduce production expression -> ident LBRACKET expression RBRACKET 
-- On OF reduce production expression -> ident LBRACKET expression RBRACKET 
-- On MINUS reduce production expression -> ident LBRACKET expression RBRACKET 
-- On DOT reduce production expression -> ident LBRACKET expression RBRACKET 
-- On DO reduce production expression -> ident LBRACKET expression RBRACKET 
-- On DIV reduce production expression -> ident LBRACKET expression RBRACKET 
-- On BINOP reduce production expression -> ident LBRACKET expression RBRACKET 
-- On AND reduce production expression -> ident LBRACKET expression RBRACKET 

State 32:
expression -> expression . PLUS expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . MINUS expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . TIMES expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . DIV expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . BINOP expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . AND expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . OR expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> expression . DOT DOT expression [ TIMES RPARENT PLUS OR MINUS DOT DIV BINOP AND ]
expression -> LPARENT expression . RPARENT [ TIMES SEMICOLON RPARENT RBRACKET PLUS OR OF MINUS DOT DO DIV BINOP AND ]
-- On TIMES shift to state 14
-- On RPARENT shift to state 33
-- On PLUS shift to state 19
-- On OR shift to state 23
-- On MINUS shift to state 25
-- On DOT shift to state 16
-- On DIV shift to state 21
-- On BINOP shift to state 27
-- On AND shift to state 29
